--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_counter_app">
+    package="com.example.flutter_learn_bloc">
    <application
-        android:label="Counter"
+        android:label="Counter App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
